# hello-mfc

./: CMakeLists.txt
filesystem/read/: CMakeLists.txt  MyMFCApp.rc  main.cpp
socket/tcp/client/: CMakeLists.txt  mfc.cpp  mfc.h
